compiler/typ/tests/fixtures/diagnostics/0214_adt_tuple_constructor_mismatch_08.ml.infer.expected
File "0214_adt_tuple_constructor_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0214_adt_tuple_constructor_mismatch_08 is not a valid module name.

File "0214_adt_tuple_constructor_mismatch_08.ml", line 2, characters 32-36:
2 | let _ : rec_theta = Pair_theta (true, 7)
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
